sandbox/output
Anagrams.java:13: error: cannot find symbol
        List<String> anagrams = new ArrayList<String>();
                                    ^
  symbol:   class ArrayList
  location: class Anagrams
1 error
